--- a/css/styles.css
+++ b/css/styles.css
@@ -298,6 +298,7 @@ figure {
 
 img,
 svg {
+  width: 70%;
   vertical-align: middle;
 }
 
@@ -11384,11 +11385,11 @@ html {
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
     color: #fff;
-    background: #1abc9c;
+    background: #f5b334;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
     color: #fff;
-    background: #1abc9c;
+    background: #f5b334;
   }
 
   #mainNav.navbar-shrink {
