--- a/프로젝트2/style.css
+++ b/프로젝트2/style.css
@@ -13,19 +13,20 @@
      height: 1213px;
     } 
 .inner::after, .inner::before{content: "";display: block; clear: both;}   
-.cat{ height: 100%; float: left; margin-top: 80px; margin-left: 10%;}   
+.cat{ height: 100%;float: left; margin-top: 80px; margin-left: 20.5%; }   
 .cat::after, .cat::before{content: "";display: block; clear: both;}
-.cat li{float:left; list-style: none;}
+.cat li{float:left; list-style: none;
+       margin: 0 2em;}
 .cat li a{text-decoration: none;
         color: white;
     font-size: 24px;
-    margin: 0 80px;
+    
      }
       
-.logo {padding: 50px 50px;float: left;}
+.logo {padding:50px 0 0 50px;float: left;}
 .login::after, .login::before{content: "";display: block; clear: both;}
 .login{float: right;
-           padding:70px 50px;}
+           padding:70px 50px 0 0;}
 .login img{padding-left: 50px;}           
 
 .main h2{text-align: center;
@@ -46,6 +47,14 @@
 .text{position: relative;
       top: 100px;}       
 
+
+          
+      @media(max-width:900px){
+       .logo {padding:50px;float: none; text-align: center;}
+       .cat{float: none; margin-top: 0px; margin-left: 0;margin: 0 auto; width: 75%;} 
+       .login{display: none;}
+      } 
+       
 /*************************컨텐츠1****************/
 
 .content1{background-color: white;
@@ -61,7 +70,7 @@
        margin: 0 auto;
          background-size: cover;
           width: 100%;
-          height: 1050px;}
+          }
 .content2 h1{color: white;
             text-align: center;
             padding-top: 80px;
@@ -94,9 +103,9 @@
 .content3{
           background-image: url(./img/middle-back.png);
           background-repeat: no-repeat;
-          
+          background-size: cover;
           width: 100%;
-          height: 557px;
+          padding-bottom: 50px;
         
         }
 .tt{text-align: center;
@@ -139,10 +148,14 @@
                -ms-transform: scale(1.1);
                -o-transform: scale(1.1);}
 
-       
+@media(max-width:900px){.content4 .con4-box{
+      
+       width: 50%;}}
               
-              
-             
+       @media(max-width:450px){.content4 .con4-box{
+      
+              width: 100%; float: none;}}
+                                  
 /*****************컨텐츠5***************************/
 .content5{background-image:url(./img/last-back.png) ;
          width: 100%;  
@@ -154,7 +167,7 @@
  .ttt h2{font-size: 50px;}
  .ttt p{padding-top: 50px;}   
  .map{width: 100%;
-     margin-left: 34%;
+    text-align: center;
      margin-top: 30px;}
 
 
@@ -162,7 +175,8 @@
 
 
  /********************푸터***************************/      
- footer{height: 300px;
+ footer{width: 100%;
+       padding-bottom: 50px;
         background-color: #222121;}
  footer p{text-align: center;
           color:white;
